cabal-version:      3.0
name:               tacview
synopsis:           Tacview codec and Tacview accessories
version:            1.1.0.0
license:            Zlib
author:             Matt Kline
maintainer:         matt@bitbashing.io
category:           Data
build-type:         Simple

common shared
    ghc-options: -Weverything
                 -Wno-all-missed-specialisations
                 -Wno-implicit-prelude
                 -Wno-missed-specialisations
                 -Wno-missing-export-lists
                 -Wno-missing-import-lists
                 -Wno-missing-kind-signatures
                 -Wno-missing-local-signatures
                 -Wno-missing-role-annotations
                 -Wno-missing-safe-haskell-mode
                 -Wno-monomorphism-restriction
                 -Wno-safe
                 -Wno-type-defaults
                 -Wno-unsafe
                 -Wno-x-partial
                 -threaded
                 -fno-ignore-asserts
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        DeriveAnyClass,
                        DeriveGeneric,
                        DerivingStrategies,
                        ImportQualifiedPost,
                        LambdaCase,
                        MultiWayIf,
                        OverloadedRecordDot,
                        OverloadedStrings,
                        RecordWildCards,
                        TupleSections

common exeopts
    import: shared
    ghc-options: -rtsopts=all "-with-rtsopts=-N --io-manager=native"


library
    import: shared
    exposed-modules: Data.Tacview.Annotate
                     Data.Tacview
                     Data.Tacview.Delta
                     Data.Tacview.Ignores
                     Data.Tacview.Ingest
                     Data.Tacview.MinId
                     Data.Tacview.Rewrite
                     Data.Tacview.Sink
                     Data.Tacview.Source
    hs-source-dirs: lib
    build-depends: base,
                   bytestring,
                   bytestring-trie,
                   conduit,
                   containers,
                   ghc,
                   directory,
                   hashtables,
                   hoare,
                   stm,
                   text,
                   transformers,
                   unordered-containers,
                   vector,
                   zip

executable tacview-filter
    import: exeopts
    hs-source-dirs: filter
    main-is: Main.hs
    other-modules: Delta,
    build-depends: base,
                   ghc,
                   hashtables,
                   hoare,
                   tacview,
                   ansi-terminal,
                   async,
                   clock,
                   optparse-applicative,
                   stm,

executable tacview-replay
    import: exeopts
    main-is: Replay.hs
    build-depends: base,
                   clock,
                   hoare,
                   optparse-applicative,
                   tacview,
                   text,

executable tacview-server
    import: exeopts
    main-is: Server.hs
    build-depends: base,
                   tacview,
                   async,
                   bytestring,
                   containers,
                   ghc,
                   hoare,
                   network,
                   stm,
                   text,
                   optparse-applicative,
                   vector

executable tacview-stats
    import: exeopts
    main-is: Stats.hs
    build-depends: base,
                   tacview,
                   ansi-terminal,
                   async,
                   containers,
                   clock,
                   ghc,
                   hoare,
                   text,
                   optparse-applicative,
                   unordered-containers,

executable test-client
    import: exeopts
    hs-source-dirs: client
    main-is: Main.hs
    build-depends: base,
                   bytestring,
                   network,
                   text
